[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Wowk <dev@adrianwowk.com>"]
publish = false
default-run = "advent_of_code_2023"

[dependencies]
aoc = "0.4.0"
nom = "7.1.3"
num = "0.4.1"
rayon = "1.8.0"

[features]
default = ["bench"]
bench = []

[lib]
doctest = false
